New Auth0 authentication mode

--- a/back/sample.env
+++ b/back/sample.env
@@ -1,30 +1,37 @@
 PORT=8080
+
 DB_USERNAME=root
 DB_PASSWORD=
 DB_NAME=sprint2
 DB_PORT=3306
 DB_HOST=localhost
+
 REDIS_HOST=localhost
 REDIS_PORT=6379
 JWT_PASS=1234567890
 URL_FRONT=http://127.0.0.1:5500/front
 URL_API=http://localhost:8080
+
 GOOGLE_CLIENT_ID=784221040753-5fdt4hv8838nlb9pvri8p1gqgvj2rafn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK=http://localhost:8080/auth/google/callback
+
 FACEBOOK_CLIENT_ID=305259091459662
 FACEBOOK_CLIENT_SECRET=f9486bd78e9263109e594ac0b42c3d92
 FACEBOOK_CALLBACK=https://acamica.loca.lt/auth/facebook/callback
+
 LINKEDIN_CLIENT_ID=77qo4rje2vzd6n
 LINKEDIN_CLIENT_SECRET=wuamsqWOURy0D0AI
 LINKEDIN_CALLBACK=https://acamica.loca.lt/auth/linkedin/callback
+
 GITHUB_CLIENT_ID=4d22c305c936e8cbdeb1
 GITHUB_CLIENT_SECRET=d328f3f36674667ae0c58720d431cd3fa44d9dc3
 GITHUB_CALLBACK=http://localhost:8080/auth/github/callback
-AUTH0_DOMAIN=dev-zgut56r8.us.auth0.com
-AUTH0_CLIENT_ID=DD9gHJJAH1nsuF6MVGhSXBREVygXkgTg
-AUTH0_CLIENT_SECRET=gvG32stjcgxOPuNHSeoaI67j744QuASU-_Hh3lcAAufW3NYaHKTegGoSgz2xj_IG
-AUTH0_CALLBACK=http://localhost:8080/auth/auth0/callback
+
+AUTH0_BASE_URL=http://localhost:8080/auth/auth0
+AUTH0_CLIENT_ID=MNeoz4VL0Gam2GKtcCKcqsWmSBC6oihE
+AUTH0_ISSUER_BASE_URL=https://dev-zgut56r8.us.auth0.com
+
 MERCADOPAGO_PUBLIC_KEY=TEST-4f1be09b-de90-409e-be6c-282da7b8c326
 MERCADOPAGO_TOKEN=TEST-1762418979261619-091023-b28f7098b8cc27602768e43b5b67f0f7-358220025
 PAYPAL_CLIENT_ID=Ad59YdTo92RtahOTQwdIqWozeLwR3gDjuL3aRX3Z7SjfzZC6hmuu_LFRc4Ck_iQmRL1WUiogULWzbQxo
