--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
+    "express-openid-connect": "^2.5.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.11",
